--- a/.fly.toml
+++ b/.fly.toml
@@ -1,5 +1,15 @@
-
-
-# .fly.toml
 [build]
-  image = "python:3.11"
+  dockerfile = "Dockerfile"
+
+[env]
+  FLASK_APP = "wsgi.py"
+
+[[services]]
+  internal_port = 8080
+  protocol = "tcp"
+
+  [[services.ports]]
+    port = 80
+
+  [[services.ports]]
+    port = 443
